db-clusterip-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: db-clusterip
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - port: 3306
      targetPort: 3306
