server-clusterip-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: server-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8888
      targetPort: 8888
