ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
        - web-deploy.io.vn
        - www.web-deploy.io.vn
      secretName: petclinic
  rules:
  - host: web-deploy.io.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-clusterip-service
            port:
              number: 8888
  - host: www.web-deploy.io.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-clusterip-service
            port:
              number: 8888
